docs/api/qiskit/0.33/qiskit.pulse.transforms.AlignSequential.mdx
---
title: AlignSequential (v0.33)
description: API reference for qiskit.pulse.transforms.AlignSequential in qiskit v0.33
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.pulse.transforms.AlignSequential
---

# AlignSequential

<Class id="qiskit.pulse.transforms.AlignSequential" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/pulse/transforms/alignments.py" signature="AlignSequential" modifiers="class">
  Bases: `qiskit.pulse.transforms.alignments.AlignmentKind`

  Align instructions sequentially.

  Instructions played on different channels are also arranged in a sequence. No buffer time is inserted in between instructions.

  Create new context.

  ## Methods

  <span id="qiskit-pulse-transforms-alignsequential-align" />

  ### align

  <Function id="qiskit.pulse.transforms.AlignSequential.align" signature="AlignSequential.align(schedule)">
    Reallocate instructions according to the policy.

    Only top-level sub-schedules are aligned. If sub-schedules are nested, nested schedules are not recursively aligned.

    **Parameters**

    **schedule** (`Schedule`) – Schedule to align.

    **Return type**

    `Schedule`

    **Returns**

    Schedule with reallocated instructions.
  </Function>

  <span id="qiskit-pulse-transforms-alignsequential-to-dict" />

  ### to\_dict

  <Function id="qiskit.pulse.transforms.AlignSequential.to_dict" signature="AlignSequential.to_dict()">
    Returns dictionary to represent this alignment.

    **Return type**

    `Dict`\[`str`, `Any`]
  </Function>

  ## Attributes

  ### is\_sequential

  <Attribute id="qiskit.pulse.transforms.AlignSequential.is_sequential" attributeValue="True" />
</Class>

